--- a/covid-19 statics.html
+++ b/covid-19 statics.html
@@ -14,7 +14,7 @@
   <h5> (by web seekers!)</h5>
   <br>
     <h2>Login</h2>
-    <img src="WhatsApp Image 2025-09-14 at 04.20.46_1acd089c.jpg" alt="poster ( sadly the poster is not loading :( )" width="300 px" height="400 px">
+    <img src="poster.jpg" alt="poster ( sadly the poster is not loading :( )" width="300 px" height="400 px">
    
     </div>
     <div>
@@ -47,7 +47,7 @@
         </script>
                  </center>
                  <footer>
-                 <img src="WhatsApp Image 2025-09-14 at 04.30.20_0079d692.jpg" alt="logo ( sadly the logo is not loading :( )" height="150 px" width="150 px">
+                 <img src="logo.jpg" alt="logo ( sadly the logo is not loading :( )" height="150 px" width="150 px">
 </footer>
     </pre>
 
