--- a/covid-19 statics.html
+++ b/covid-19 statics.html
@@ -19,7 +19,7 @@
     </div>
     <div>
         <pre>
-                <form method="GET" action="...."> 
+                <form method="GET" action="https://github.com/youssef-vty/covid-19-statics-web-seekers-/blob/main/sime-finali-home-page/html/html-home-page.html"> 
         <label>please enter your first name!</label>
         <input type="text" name="first name" id="username" placeholder="first name" required>
 <br>
