--- a/covid-19 statics.html
+++ b/covid-19 statics.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>task III</title>
-
+<title>statics</title>
+  <link rel="stylesheet" href=""
 </head>
 <body>
   
