--- a/covid-19 statics.html
+++ b/covid-19 statics.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>statics</title>
-  <link rel="stylesheet" href=""
+  <link rel="stylesheet" href="covid-19-statics-web-seekers-/covid-19 statics.html
+/login page.css
+"
 </head>
 <body>
   
