--- a/covid-19 statics.html
+++ b/covid-19 statics.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>statics</title>
-  <link rel="stylesheet" href="covid-19-statics-web-seekers-/covid-19 statics.html
-/login page.css
-"
+<title> statics</title>
+  <link rel="stylesheet" href="login page.css">
 </head>
 <body>
-  
+<header>
           <center>
-   <div>
-  <h1> covid-19 statics </h1>
-  <h5> (by web seekers!)</h5>
+   <div class="div1">
+
+  <h1 class="header1"> covid-19 statics </h1 >
+  <h5 class="header5"> (by web seekers!)</h5>
   <br>
-    <h2>Login</h2>
-    <img src="poster.jpg" alt="poster ( sadly the poster is not loading :( )" width="300 px" height="400 px">
-   
-    </div>
+    <h2 class="header2">Login</h2>
+    <img src="poster.jpg" alt="poster ( sadly the poster is not loading :( )" width="300 px" height="400 px "class="poster">
+   </header>
+</div>
+<main>
     <div>
         <pre>
-                <form method="GET" action="sime-finali-home-page/html/html-home-page.html"> 
-        <label>please enter your first name!</label>
+                <section></section>
+                <form method="GET" action="SCREENSHOTS/homepage.html"> 
+        <label class="label1">please enter your first name!</label>
         <input type="text" name="first name" id="username" placeholder="first name" required>
 <br>
-        <label>please enter your last name!</label>
+        <label class="label 2">please enter your last name!</label>
         <input type="text" name="last name" placeholder="last name"required>
 <br>
         <label>please enter your email!</label>
@@ -40,16 +41,17 @@
                <button type="submit" onclick= "sayhello()" >
             click me
         </button>   
-      
-    </div>
+      </section>
+</div>
         </form>
+        </main>
   
 
         <script src="cs.js"> 
         </script>
                  </center>
                  <footer>
-                 <img src="logo.jpg" alt="logo ( sadly the logo is not loading :( )" height="150 px" width="150 px">
+                 <img src="logo.jpg"logo ( sadly the logo is not loading :( )" height="150 px" width="150 px" class="logo">
 </footer>
     </pre>
 
