--- a/sime-finali-home-page/html/html-home-page.html
+++ b/sime-finali-home-page/html/html-home-page.html
@@ -123,5 +123,10 @@
         </form> 
         <button id="submit" type="submit">submit</button>   
     </footer>
+    <div class="link">
+        <a href="https://www.facebook.com/profile.php?id=61570547723454">Facebook</a>
+        <a href="https://www.youtube.com/@thewebseeker1686">Youtube</a>
+    </div>
 </body>
+
 </html>
