--- a/covid-19 statics.html
+++ b/covid-19 statics.html
@@ -23,7 +23,7 @@
     <div>
         <pre>
                 <section></section>
-                <form method="GET" action="SCREENSHOTS/homepage.html"> 
+                <form method="GET" action="html-home-page.html"> 
         <label class="label1">please enter your first name!</label>
         <input type="text" name="first name" id="username" placeholder="first name" required>
 <br>
