--- a/sime-finali-stats-page/html/Stats.html
+++ b/sime-finali-stats-page/html/Stats.html
@@ -76,12 +76,12 @@
     </table>
     <section class = graphs>
         <div class ="graph">
-            <h3>Recent COVID-19 deaths reported to WHO</h3>
+            <h3 class="textshadow1" >Recent COVID-19 deaths reported to WHO</h3>
         <h5>July 2023 - present</h5>
         <img class ="gr1" src="../image/2020-graph.jpeg" alt="Recent COVID-19 deaths reported to WHO">
         </div>
         <div class ="graph">
-        <h3>Total COVID-19 deaths reported to WHO</h3>
+        <h3 class="textshadow1" >Total COVID-19 deaths reported to WHO</h3>
         <h5>January 2020 - present</h5>
         <img class ="gr2" src="../image/2023-graph.jpeg" alt="Recent COVID-19 deaths reported to WHO">
         </div>
@@ -90,7 +90,8 @@
     <hr>
     <footer>
         <img class="logo" src="../image/Logo.jpeg" alt ="logo">
-        <p>&copy; 2025 Covid-19. All rights reserved</p>
+        <p class="textshadow1" >&copy; 2025 Covid-19. All rights reserved</p>
     </footer>
 </body>
+
 </html>
