--- a/sime-finali-home-page/html/html-home-page.html
+++ b/sime-finali-home-page/html/html-home-page.html
@@ -116,12 +116,12 @@
     </main>
     <footer id="feedback">
         <h2 class="Feed">back</h2>
-        <form>
-            <input name="user_name" type="text" placeholder="Please enter your name"><br>
-            <input name="emali" type="email" placeholder="Please enter your email"><br>
-            <input name="feed_back" type="text" placeholder="Please enter your feed back "><br>
-        </form> 
-        <button id="submit" type="submit">submit</button>   
+        <form method="GET" action="...">
+            <input name="user_name" type="text" placeholder="Please enter your name" required><br>
+            <input name="emali" type="email" placeholder="Please enter your email" required><br>
+            <input name="feed_back" type="text" placeholder="Please enter your feed back " required><br>
+            <button id="submit" type="submit">submit</button>  
+            </form>
     </footer>
     <div class="link">
         <a href="https://www.facebook.com/profile.php?id=61570547723454">Facebook</a>
@@ -130,3 +130,4 @@
 </body>
 
 </html>
+
