--- a/sime-finali-home-page/html/html-home-page.html
+++ b/sime-finali-home-page/html/html-home-page.html
@@ -116,7 +116,7 @@
     </main>
     <footer id="feedback">
         <h2 class="Feed">back</h2>
-        <form method="GET" action="...">
+        <form method="GET" action="sime-finali-stats-page/html/Stats.html">
             <input name="user_name" type="text" placeholder="Please enter your name" required><br>
             <input name="emali" type="email" placeholder="Please enter your email" required><br>
             <input name="feed_back" type="text" placeholder="Please enter your feed back " required><br>
@@ -130,4 +130,5 @@
 </body>
 
 </html>
+
 
