--- a/sime-finali-home-page/html-home-page.html
+++ b/sime-finali-home-page/html-home-page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Moaz, Taher, Yousef">
     <title>not found</title>
-    <link rel="stylesheet" href="../css/css-home-page.css">
+    <link rel="stylesheet" href="css-home-page.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
             <a href="#conclusion">Conclusion</a>
             <a href="#feedback">Feed back</a>
         </nav>
-        <img class="logo" src="../image/Logo.jpeg" alt="Logo">
+        <img class="logo" src="../assets/Logo.jpeg" alt="Logo">
     </header>
     <main>
         <section>
@@ -32,7 +32,7 @@
                 </div>
                 <h4>You can also watch this video :</h4>
                 <video controls width="90%" height="400px">
-                    <source src="../video/video-home-page.mp4" type="video/mp4">
+                    <source src="../assets/video-home-page.mp4" type="video/mp4">
                 </video>
         </section><hr><hr>
         <section>
@@ -110,7 +110,7 @@
                 To fully understand the impact of these efforts, it is important to look at recovery trends and survival rates, which reflect both the effectiveness of treatments and the resilience of healthcare systems.
             </p>
             <audio controls >
-                <source src="../audio/audio-home-page.mp3" type="audio/mpeg">
+                <source src="../assets/audio-home-page.mp3" type="audio/mpeg">
             </audio>
             
     </main>
@@ -130,5 +130,6 @@
 </body>
 
 </html>
+
 
 
