--- a/sime-finali-stats-page/Stats.html
+++ b/sime-finali-stats-page/Stats.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid-19</title>
-    <link rel="stylesheet" href="../css/Stats.css">
+    <link rel="stylesheet" href="Stats.css">
 </head>
 <body>
     <header>
         <nav>
             <div class = "left">
-                <img src="../image/Logo.jpeg" alt = "logo" class = "logo">
+                <img src="../assets/Logo.jpeg" alt = "logo" class = "logo">
                 <h5>Covid-19</h5>
             </div>
             <div class = "right">
@@ -78,21 +78,22 @@
         <div class ="graph">
             <h3 class="textshadow1" >Recent COVID-19 deaths reported to WHO</h3>
         <h5>July 2023 - present</h5>
-        <img class ="gr1" src="../image/2020-graph.jpeg" alt="Recent COVID-19 deaths reported to WHO">
+        <img class ="gr1" src="../assets/2020-graph.jpeg" alt="Recent COVID-19 deaths reported to WHO">
         </div>
         <div class ="graph">
         <h3 class="textshadow1" >Total COVID-19 deaths reported to WHO</h3>
         <h5>January 2020 - present</h5>
-        <img class ="gr2" src="../image/2023-graph.jpeg" alt="Recent COVID-19 deaths reported to WHO">
+        <img class ="gr2" src="../assets/2023-graph.jpeg" alt="Recent COVID-19 deaths reported to WHO">
         </div>
     </section>
     </section>
     <hr>
     <footer>
-        <img class="logo" src="../image/Logo.jpeg" alt ="logo">
+        <img class="logo" src="../assets/Logo.jpeg" alt ="logo">
         <p class="textshadow1" >&copy; 2025 Covid-19. All rights reserved</p>
     </footer>
 </body>
 
 </html>
+
 
