--- a/simi-final-login-page/index.html
+++ b/simi-final-login-page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> statics</title>
-  <link rel="stylesheet" href="css/css-login-page">
+  <link rel="stylesheet" href="css-login-page">
 </head>
 <body>
 <header>
@@ -16,14 +16,14 @@
   <br>
     <h2 class="header2">Login</h2>
     <iframe  controls width="943" height="284" src="https://www.youtube.com/embed/EwPKdofu5x4" title="🦠 COVID-19: The virus that paralyzed the world 🌍 | SARS-CoV-2 explained in 3D" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="video"></iframe>
-    <img src="image/poster.jpg" alt="poster ( sadly the poster is not loading :( )" width="300 px" height="400 px "class="poster">
+    <img src="../assets/poster.jpg" alt="poster ( sadly the poster is not loading :( )" width="300 px" height="400 px "class="poster">
    </header>
 </div>
 <main>
     <div>
         <pre>
                 <section> 
-        <img src="image/virus.webp" alt="image" width="150px" height="150px "class="img">
+        <img src="../assets/virus.webp" alt="image" width="150px" height="150px "class="img">
         <form method="GET" action="sime-finali-home-page/html/html-home-page.html"> 
         <label class="label1">please enter your first name!</label>
         <input type="text" name="first name" id="username" placeholder="first name" required>
@@ -49,11 +49,11 @@
         </main>
   
 
-        <script src="js/js-login-page"> 
+        <script src="js-login-page"> 
         </script>
                  </center>
                  <footer>
-                 <img src="image/logo.jpg"logo ( sadly the logo is not loading :( )" height="150 px" width="150 px" class="logo">
+                 <img src="../assets/logo.jpg"logo ( sadly the logo is not loading :( )" height="150 px" width="150 px" class="logo">
 </footer>
     </pre>
 
