--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title> statics</title>
-  <link rel="stylesheet" href="./simi-final-login-page/css-login-page">
+  <link rel="stylesheet" href="./simi-final-login-page
+/css-login-page
+">
 </head>
 <body>
 <header>
