--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         </main>
   
 
-        <script src="./simi-final-login-pagge/js-login-page"> 
+        <script src="./simi-final-login-page
+/js-login-page"> 
         </script>
                  </center>
                  <footer>
