--- a/sime-finali-home-page/html-home-page.html
+++ b/sime-finali-home-page/html-home-page.html
@@ -18,7 +18,7 @@
             <a href="#conclusion">Conclusion</a>
             <a href="#feedback">Feed back</a>
         </nav>
-        <img class="logo" src="../assets/Logo.jpeg" alt="Logo">
+        <img class="logo" src="../assets/logo.jpg" alt="Logo">
     </header>
     <main>
         <section>
@@ -116,7 +116,7 @@
     </main>
     <footer id="feedback">
         <h2 class="Feed">back</h2>
-        <form method="GET" action="sime-finali-stats-page/html/Stats.html">
+        <form method="GET" action="../sime-finali-stats-page/Stats.html">
             <input name="user_name" type="text" placeholder="Please enter your name" required><br>
             <input name="emali" type="email" placeholder="Please enter your email" required><br>
             <input name="feed_back" type="text" placeholder="Please enter your feed back " required><br>
@@ -130,6 +130,7 @@
 </body>
 
 </html>
+
 
 
 
